[package]
name = "covidpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dgc = "0.0"
qrcodegen = "1.7.0"
image = "0.24"
relm4 = { version = "0.4.2", features = ["libadwaita", "macros"] }
relm4-components = "0.4.0"
relm4-macros = "0.4.1"
libadwaita = "0.1"
gtk4 = "0.4"
gio = "0.15"
curl = "0.4"