[package]
name = "covidpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dgc = "0.0"
qrcodegen = "1.7"
relm4 = { git = "https://github.com/Relm4/relm4", features = [
    "libadwaita",
    "macros",
] }
relm4-macros = { git = "https://github.com/Relm4/relm4" }
relm4-components = { git = "https://github.com/Relm4/relm4" }
libadwaita = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs" }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
curl = "0.4"
